tests/neg/i25531.check
-- [E231] Declaration Error: tests/neg/i25531.scala:3:6 ----------------------------------------------------------------
3 |class Walker extends FileVisitor[Path] {} // error
  |      ^^^^^^
  |class Walker needs to be abstract, since it has 4 unimplemented members.
  |
  |Members declared in java.nio.file.FileVisitor:
  |- def postVisitDirectory(x0: java.nio.file.Path, x1: java.io.IOException): java.nio.file.FileVisitResult
  |- def preVisitDirectory
  |  (x0: java.nio.file.Path, x1: java.nio.file.attribute.BasicFileAttributes): java.nio.file.FileVisitResult
  |- def visitFile(x0: java.nio.file.Path, x1: java.nio.file.attribute.BasicFileAttributes): java.nio.file.FileVisitResult
  |- def visitFileFailed(x0: java.nio.file.Path, x1: java.io.IOException): java.nio.file.FileVisitResult
